--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-preset-babili": "0.0.12",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.24.0",
-    "jest": "^20.0.4",
+    "jest-cli": "^21.2.1",
     "null-loader": "^0.1.1",
     "rimraf": "^2.6.1",
     "webpack": "2.6.1",
